ui: don't mangle integral constants

Bug: 780781
Change-Id: I3dd4b57d4017754a2ff736d3fb37d5cc92f9faee
Reviewed-on: https://chromium-review.googlesource.com/753792
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514764}